--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
             <div class="menu">
                 <nav>
                     <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Servicios</a></li>
                         <li><a href="#">Productos</a></li>
-                        <li><a href="#">Soluciones</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Compañía</a></li>
                         <li><a href="#">Contactos</a></li>
                     </ul>
                 </nav>
