--- a/servicios.html
+++ b/servicios.html
@@ -25,10 +25,10 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Productos</a></li>
-                        <li><a href="#">Contactos</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./servicios.html">Servicios</a></li>
+                        <li><a href="./productos.html">Productos</a></li>
+                        <li><a href="./contacto.html">Contactos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -44,6 +44,51 @@
        
 
     </main>
+
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box-1">
+                <figure><a>
+                        <img src="media/logo.png" alt="">
+                    </a>
+                </figure>
+
+            </div>
+
+            <!-- <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <P></P>
+                <P></P>
+            </div>
+-->
+
+            <div class="box">
+<!--                <h2> SEGUINOS:</h2>
+                <div class="red-social">
+                    <a href="https://wa.me/5491167575272" target="_blank" class="fa-brands fa-whatsapp">
+
+                    </a>
+                    <a href="https://www.facebook.com/info.law.partners" target="_blank" class="fa-brands fa-facebook">
+
+                    </a>
+                    <a href="https://www.instagram.com/law.partners.ar" target="_blank" class="fa-brands fa-instagram">
+                    </a>
+
+                    <a href="https://www.linkedin.com/company/law-partners-ar/" target="_blank"
+                        class="fa-brands fa-linkedin-in">
+                    </a>
+                </div>
+                -->
+            </div>
+
+        </div>
+
+        <div class="grupo-2">
+            <small> &copy;2023 <b>Nadia Belén Amaro</b> - Todos los Derechos Reservados. </small>
+        </div>
+
+    </footer>
+
 
     <script src="js/script.js"></script>
 </body>
