--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/contacto.css">
 </head>
 <body>
     
