--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     
     <section id="slider">
         <div id="content-images-slider">
-            <div class="image-slider rellax" data-rellax-speed="-10" style='background-image: url(images/slider-4.png)'></div>
-            <div class="image-slider rellax" data-rellax-speed="-6" style='background-image: url(images/slider-3.png)'></div>
+            <div class="image-slider rellax" data-rellax-speed="-10" style='background-image: url(media/slider-4.png)'></div>
+            <div class="image-slider rellax" data-rellax-speed="-6" style='background-image: url(media/slider-3.png)'></div>
             <div class="text-slider rellax" data-rellax-speed="-10">
                 <h1 id='slider-text'>ATLANT</h1>
             </div>
-            <div class="image-slider rellax" data-rellax-speed="-4" style='background-image: url(images/slider-2.png)'></div>
-            <div class="image-slider" style='background-image: url(images/slider-1.png)'></div>
+            <div class="image-slider rellax" data-rellax-speed="-4" style='background-image: url(media/slider-2.png)'></div>
+            <div class="image-slider" style='background-image: url(media/slider-1.png)'></div>
         </div>
     </section>
 
