--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
 <body>
     <header id="header">
         <img src="./media/logo.png" alt="logo" class="logo">
+        <div class="menu"></div>
         <nav>
             <ul class="menulist">
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="./index.html" class="active">Home</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./productos.html">Productos</a></li>
                 <li><a href="./contacto.html">Contactos</a></li>
@@ -28,10 +29,18 @@
     </header>
 
     <section>
-        
-        <h2></h2>
-
+        <img src="./media/slider-4.png" alt="" id="nube1">
+        <img src="./media/slider-3.png" alt="" id="transparente">
+        <!--<img src="./images/nube2.png" alt="nube2" id="nube2">-->
+        <h2 id="slogan">ATLANT</h2>
+        <!--<a href="#" id="btn">Ahora</a>-->
+        <img src="./media/slider-2.png" alt="" id="fondo">
+        <img src="./media/slider-1.png" alt="" id="viento">
+       <!-- <img src="./images/persona.png" alt="persona" id="persona">
+-->
     </section>
+
+    <section id="content"></section>
 
 
     <footer class="pie-pagina">
@@ -78,8 +87,8 @@
 
     </footer>
 
-    <script src="js/rellax.min.js"></script>
-    <script src="js/script.js"></script>
+    
+    <script src="./js/script.js"></script>
 
 </body>
 
