--- a/servicios.html
+++ b/servicios.html
@@ -11,7 +11,7 @@
 
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/servicios.css">
 </head>
 
 <body>
