--- a/servicios.html
+++ b/servicios.html
@@ -28,7 +28,7 @@
                 <nav>
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./servicios.html" id="selected">Servicios</a></li>
+                        <li><a href="./servicios.html" class="select">Servicios</a></li>
                         <li><a href="./productos.html">Productos</a></li>
                         <li><a href="./contacto.html">Contactos</a></li>
                     </ul>
@@ -50,7 +50,7 @@
             </h1>
 
 
-        </section>
+        </section> 
 
 
         <section class="parallax bg">
