--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./servicios.html">Servicios</a></li>
                         <li><a href="./productos.html">Productos</a></li>
-                        <li><a href="./contacto.html" id="selected">Contactos</a></li>
+                        <li><a href="./contacto.html" class="select">Contactos</a></li>
                     </ul>
                 </nav>
             </div>
