--- a/productos.html
+++ b/productos.html
@@ -29,7 +29,7 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./servicios.html">Servicios</a></li>
-                        <li><a href="./productos.html" id="selected">Productos</a></li>
+                        <li><a href="./productos.html" class="select">Productos</a></li>
                         <li><a href="./contacto.html">Contactos</a></li>
                     </ul>
                 </nav>
