--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div class="box__footer">
                     <div class="logo">
-                        <img src="Images/logo-magtimus.png" alt="">
+                        <img src="media/logo.png" alt="">
                     </div>
                     <div class="terms">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum reiciendis et quasi aut facere vitae vero. Inventore, minus ab voluptate modi repellat, pariatur tempora quisquam, debitis facilis explicabo voluptatem. A.
