--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
                 <div class="box__footer">
                     <h2>Contactenos</h2>
                     
-                    <a href="#"><i class="fab fa-facebook-square"></i> E-mail </a>
-                    
-                    <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
+                    <a href="#"><img src="./media/correoelectronico.png" alt=""> E-mail </a>
+                    <!---
+                    <a href="#"><img src="./media/face.png" alt="">  Facebook</a>
                     <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
                     <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
                     <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+                -->
                 </div>
             </div>
 
