--- a/index.html
+++ b/index.html
@@ -59,13 +59,47 @@
         </div>
 <main>
 
+    <div class="body__page">
+
+        <div class="container__card">
+
+            <div class="card c1">
+                <div class="icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="info__description">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, repellendus dolor dolorem voluptate aut expedita doloribus molestias modi libero excepturi cum perferendis laboriosam praesentium provident suscipit, eius impedit quidem magnam ipsa similique necessitatibus nam delectus nesciunt magni! Temporibus autem, reprehenderit amet quidem aliquid architecto, blanditiis, neque quam asperiores eum enim.</p>
+                    <input type="button" value="Leer Más">
+                </div>
+            </div>
+
+            <div class="card c2">
+                <div class="icon">
+                    <i class="fab fa-css3"></i>
+                </div>
+                <div class="info__description">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, repellendus dolor dolorem voluptate aut expedita doloribus molestias modi libero excepturi cum perferendis laboriosam praesentium provident suscipit, eius impedit quidem magnam ipsa similique necessitatibus nam delectus nesciunt magni! Temporibus autem, reprehenderit amet quidem aliquid architecto, blanditiis, neque quam asperiores eum enim.</p>
+                    <input type="button" value="Leer Más">
+                </div>
+            </div>
+
+            <div class="card c3">
+                <div class="icon">
+                    <i class="fab fa-js-square"></i>
+                </div>
+                <div class="info__description">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, repellendus dolor dolorem voluptate aut expedita doloribus molestias modi libero excepturi cum perferendis laboriosam praesentium provident suscipit, eius impedit quidem magnam ipsa similique necessitatibus nam delectus nesciunt magni! Temporibus autem, reprehenderit amet quidem aliquid architecto, blanditiis, neque quam asperiores eum enim.</p>
+                    <input type="button" value="Leer Más">
+                </div>
+            </div>
+
+            
+
+        </div>
+
+    </div>
 
 
-
-
-
-
-    
 </main>
 
 
