--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 
 <body>
 
-    <header id="header">
+    <header>
+
         <div class="container__header">
+
             <div class="logo">
                 <img src="media/logo.png" alt="">
             </div>
-            <div class="container__nav">
-                <nav id="nav">
+
+            <div class="menu">
+                <nav>
                     <ul>
                         <li><a href="./index.html" class="select">Home</a></li>
                         <li><a href="./servicios.html">Servicios</a></li>
@@ -30,13 +33,11 @@
                         <li><a href="./contacto.html">Contactos</a></li>
                     </ul>
                 </nav>
-
-
-                <div class="btn__menu" id="btn_menu"><i class="fas fa-bars"></i></div>
-
             </div>
+            <i class="fa-solid fa-bars" id="icon_menu"></i>
 
         </div>
+
     </header>
 
     <div class="container__all" id="container_all">
@@ -154,8 +155,8 @@
                     <a href="#"><img src="./media/face.png" alt=""> Twitter</a>
                     <a href="#"><img src="./media/face.png" alt=""> Linkedin</a>
                     <a href="#"><img src="./media/face.png" alt=""></i> Instagram</a>
-                -->
-                </div>
+                
+                </div>-->
             </div>
 
             <div class="box__copyright">
@@ -167,6 +168,7 @@
     </div>
 
     <script src="./js/estilos.js"></script>
+
 
 </body>
 
