--- a/servicios.html
+++ b/servicios.html
@@ -61,8 +61,8 @@
                     eius!</p>
                 <hr>
                 <div class="footer__card">
-                    <h3 class="user__name">Mamie Barnett</h3>
-                    <i>08 Marzo</i>
+                    <h3 class="user__name">********</h3>
+                    <i>********</i>
                 </div>
             </div>
             <div class="card">
@@ -75,8 +75,8 @@
                     eius!</p>
                 <hr>
                 <div class="footer__card">
-                    <h3 class="user__name">Mamie Barnett</h3>
-                    <i>08 Marzo</i>
+                    <h3 class="user__name">**********</h3>
+                    <i>********</i>
                 </div>
             </div>
             <div class="card">
@@ -89,8 +89,8 @@
                     eius!</p>
                 <hr>
                 <div class="footer__card">
-                    <h3 class="user__name">Mamie Barnett</h3>
-                    <i>08 Marzo</i>
+                    <h3 class="user__name">*********</h3>
+                    <i>********</i>
                 </div>
             </div>
         </div>
