--- a/servicios.html
+++ b/servicios.html
@@ -55,47 +55,88 @@
                 <div class="cover__card">
                     <img src="images/img-1.jpg" alt="">
                 </div>
-                <h2>Sabemos cómo aumentar los beneficios</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt eius dolore pariatur. Error,
-                    provident et similique sunt voluptate odit eos facere expedita, culpa at officia magnam quia vel
-                    eius!</p>
+                <h2>Informes de Control de Organización de Servicios.
+                </h2>
+                <p>Obtenga una evaluación independiente de los procesos y controles empresariales en el entorno de IT
+                    dentro de una organización de servicios.</p>
                 <hr>
                 <div class="footer__card">
-                    <h3 class="user__name">********</h3>
-                    <i>********</i>
+                    <h3 class="user__name"></h3>
+                    <i></i>
                 </div>
             </div>
             <div class="card">
                 <div class="cover__card">
                     <img src="images/img-2.jpg" alt="">
                 </div>
-                <h2>Sabemos cómo aumentar los beneficios</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt eius dolore pariatur. Error,
-                    provident et similique sunt voluptate odit eos facere expedita, culpa at officia magnam quia vel
-                    eius!</p>
+                <h2>Transformación digital de la empresa.</h2>
+                <p>Aprovechen las ventajas de la era digital para sacar provecho de la innovación, impulsar la
+                    eficiencia operativa y hacer crecer sus negocios.</p>
                 <hr>
                 <div class="footer__card">
-                    <h3 class="user__name">**********</h3>
-                    <i>********</i>
+                    <h3 class="user__name"></h3>
+                    <i></i>
                 </div>
             </div>
             <div class="card">
                 <div class="cover__card">
                     <img src="images/img-3.jpg" alt="">
                 </div>
-                <h2>Sabemos cómo aumentar los beneficios</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt eius dolore pariatur. Error,
-                    provident et similique sunt voluptate odit eos facere expedita, culpa at officia magnam quia vel
-                    eius!</p>
+                <h2>Servicios de Transformación Digital.</h2>
+                <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
+                    experimentar con nuevas ideas y expandir el éxito.</p>
                 <hr>
                 <div class="footer__card">
-                    <h3 class="user__name">*********</h3>
-                    <i>********</i>
+                    <h3 class="user__name"></h3>
+                    <i></i>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="cover__card">
+                    <img src="images/img-1.jpg" alt="">
+                </div>
+                <h2>Entrega de soluciones tecnológicas.
+                </h2>
+                <p>Nuestro objetivo es apoyar a sus organizaciones a medida que inician o experimentan una
+                    transformación importante.</p>
+                <hr>
+                <div class="footer__card">
+                    <h3 class="user__name"></h3>
+                    <i></i>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover__card">
+                    <img src="images/img-2.jpg" alt="">
+                </div>
+                <h2>Transformación de la tecnología.</h2>
+                <p>Las organizaciones deben considerar la transformación fundacional en lugar de soluciones rápidas e
+                    inversiones ad hoc para darles la agilidad para adaptarse.</p>
+                <hr>
+                <div class="footer__card">
+                    <h3 class="user__name"></h3>
+                    <i></i>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover__card">
+                    <img src="images/img-3.jpg" alt="">
+                </div>
+                <h2>Servicios de consultoría de blockchain.</h2>
+                <p>Blockchain es un libro contable descentralizado de cada transacción que se produce a través de una
+                    red, lo que permite el intercambio descentralizado de datos de confianza un "libro de registro
+                    compartido".</p>
+                <hr>
+                <div class="footer__card">
+                    <h3 class="user__name"></h3>
+                    <i></i>
                 </div>
             </div>
         </div>
 
-    
+
 
     </main>
 
@@ -113,10 +154,10 @@
 
             <div class="box__footer">
                 <h2>Servicios</h2>
-                <a href="#">App Desarrollo</a>
-                <a href="#">App Marketing</a>
-                <a href="#">IOS Desarrollo</a>
-                <a href="#">Android Desarrollo</a>
+                <a href="#">Informes de Control</a>
+                <a href="#">Transformación Digital</a>
+                <a href="#">Entrega de Soluciones Tecnológicas</a>
+                <a href="#">Consultoria</a>
             </div>
 
             <div class="box__footer">
@@ -141,7 +182,7 @@
 
         <div class="box__copyright">
             <hr>
-            <p>Todos los derechos reservados © 2023 <b>Nadia Belen Amaro</b></p>
+            <p>Todos los derechos reservados © 2023 <b>Atlant</b></p>
         </div>
     </Footer>
 
