--- a/contacto.html
+++ b/contacto.html
@@ -61,7 +61,6 @@
 
     </main>
 
-
     <Footer>
         <div class="container__footer">
 
@@ -74,10 +73,10 @@
 
             <div class="box__footer">
                 <h2>Servicios</h2>
-                <a href="#">App Desarrollo</a>
-                <a href="#">App Marketing</a>
-                <a href="#">IOS Desarrollo</a>
-                <a href="#">Android Desarrollo</a>
+                <a href="#">Informes de Control</a>
+                <a href="#">Transformación Digital</a>
+                <a href="#">Entrega de Soluciones Tecnológicas</a>
+                <a href="#">Consultoria</a>
             </div>
 
             <div class="box__footer">
@@ -102,7 +101,7 @@
 
         <div class="box__copyright">
             <hr>
-            <p>Todos los derechos reservados © 2023 <b>Nadia Belen Amaro</b></p>
+            <p>Todos los derechos reservados © 2023 <b>Atlant</b></p>
         </div>
     </Footer>
     
