--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
 
 
 
-
     <Footer>
         <div class="container__footer">
 
@@ -135,10 +134,10 @@
 
             <div class="box__footer">
                 <h2>Servicios</h2>
-                <a href="#">App Desarrollo</a>
-                <a href="#">App Marketing</a>
-                <a href="#">IOS Desarrollo</a>
-                <a href="#">Android Desarrollo</a>
+                <a href="#">Informes de Control</a>
+                <a href="#">Transformación Digital</a>
+                <a href="#">Entrega de Soluciones Tecnológicas</a>
+                <a href="#">Consultoria</a>
             </div>
 
             <div class="box__footer">
@@ -150,24 +149,22 @@
             </div>
 
             <!---
-                <div class="box__footer">
-                    <h2>Contactenos</h2>
+            <div class="box__footer">
+                <h2>Contactenos</h2>
 
-                    <a href="#"><img src="./media/face.png" alt="">  Facebook</a>
-                    <a href="#"><img src="./media/face.png" alt=""> Twitter</a>
-                    <a href="#"><img src="./media/face.png" alt=""> Linkedin</a>
-                    <a href="#"><img src="./media/face.png" alt=""></i> Instagram</a>
-                
-                </div>-->
+                <a href="#"><img src="./media/face.png" alt="">  Facebook</a>
+                <a href="#"><img src="./media/face.png" alt=""> Twitter</a>
+                <a href="#"><img src="./media/face.png" alt=""> Linkedin</a>
+                <a href="#"><img src="./media/face.png" alt=""></i> Instagram</a>
+            
+            </div>-->
         </div>
 
         <div class="box__copyright">
             <hr>
-            <p>Todos los derechos reservados © 2023 <b>Nadia Belen Amaro</b></p>
+            <p>Todos los derechos reservados © 2023 <b>Atlant</b></p>
         </div>
     </Footer>
-
-
 
     <script src="./js/estilos.js"></script>
 
