--- a/servicios.html
+++ b/servicios.html
@@ -53,7 +53,7 @@
         <div class="container__cards">
             <div class="card">
                 <div class="cover__card">
-                    <img src="images/img-1.jpg" alt="">
+                    <img src="media/informe.jpg" alt="">
                 </div>
                 <h2>Informes de Control de Organización de Servicios.
                 </h2>
@@ -67,7 +67,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="images/img-2.jpg" alt="">
+                    <img src="media/transformacionempresa.jpg" alt="">
                 </div>
                 <h2>Transformación digital de la empresa.</h2>
                 <p>Aprovechen las ventajas de la era digital para sacar provecho de la innovación, impulsar la
@@ -80,7 +80,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="images/img-3.jpg" alt="">
+                    <img src="media/serviciosdigital.jpg" alt="">
                 </div>
                 <h2>Servicios de Transformación Digital.</h2>
                 <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
@@ -95,7 +95,7 @@
 
             <div class="card">
                 <div class="cover__card">
-                    <img src="images/img-1.jpg" alt="">
+                    <img src="media/entregadesolucionestecnologicas.jpg" alt="">
                 </div>
                 <h2>Entrega de soluciones tecnológicas.
                 </h2>
@@ -109,7 +109,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="images/img-2.jpg" alt="">
+                    <img src="media/transformaciondelatecnologia.jpg" alt="">
                 </div>
                 <h2>Transformación de la tecnología.</h2>
                 <p>Las organizaciones deben considerar la transformación fundacional en lugar de soluciones rápidas e
@@ -122,7 +122,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="images/img-3.jpg" alt="">
+                    <img src="media/blockchain.jpg" alt="">
                 </div>
                 <h2>Servicios de consultoría de blockchain.</h2>
                 <p>Blockchain es un libro contable descentralizado de cada transacción que se produce a través de una
