--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </header>
 
-    <div class="container__all" id="container_all">
+    <!-- <div class="container__all" id="container_all">
 
         <div class="cover">
 
@@ -118,6 +118,74 @@
                 </div>
             </div>
         </div>
+    </main>
+-->
+
+    <!--------PARALLAX-->
+
+    <main>
+        <section class="no-parallax">
+            <h1>Acompañamos a nuestros clientes en cada paso de su desarrollo tecnológico.</h1>
+
+
+
+        </section>
+
+
+        <section class="parallax bg">
+
+            <h2> ¿Te faltan recursos para mejorar la Ciberseguridad de tu empresa? Consultanos sin cargo.</h2>
+
+
+        </section>
+
+
+        <section class="no-parallax">
+
+            <div class="container__cards">
+                <div class="card">
+                    <div class="cover__card">
+                        <img src="media/servicios.jpg" alt="">
+                    </div>
+                    <h2> SERVICIOS</h2>
+                    <p>¿En que nos especializamos?</p>
+                    <hr>
+                    <div class="footer__card">
+                        <button class="botones agrandar">
+                            <a href="./servicios.html">Saber más</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="cover__card">
+                        <img src="media/producto.jpg" alt="">
+                    </div>
+                    <h2>PRODUCTOS</h2>
+                    <p>Aprovechen las ventajas de la era digital para sacar provecho de la innovación, impulsar la
+                        eficiencia operativa y hacer crecer sus negocios.</p>
+                    <hr>
+                    <div class="footer__card">
+                        <button class="botones agrandar">
+                            <a href="./productos.html">Saber más</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="cover__card">
+                        <img src="media/serviciosdigital.jpg" alt="">
+                    </div>
+                    <h2>Servicios de Transformación Digital.</h2>
+                    <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
+                        experimentar con nuevas ideas y expandir el éxito.</p>
+                    <hr>
+                    <div class="footer__card">
+                        <h3 class="user__name"></h3>
+                        <i></i>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
 
 
