--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                         <img src="media/servicios.jpg" alt="">
                     </div>
                     <h2> SERVICIOS</h2>
-                    <p>¿En que nos especializamos?</p>
+                    <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
+                        experimentar con nuevas ideas y expandir el éxito.</p>
                     <hr>
                     <div class="footer__card">
                         <button class="botones agrandar">
@@ -172,15 +173,16 @@
                 </div>
                 <div class="card">
                     <div class="cover__card">
-                        <img src="media/serviciosdigital.jpg" alt="">
+                        <img src="media/contactanos.jpg" alt="">
                     </div>
-                    <h2>Servicios de Transformación Digital.</h2>
+                    <h2>CONTACTANOS</h2>
                     <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
                         experimentar con nuevas ideas y expandir el éxito.</p>
                     <hr>
                     <div class="footer__card">
-                        <h3 class="user__name"></h3>
-                        <i></i>
+                        <button class="botones agrandar">
+                            <a href="./contacto.html">Saber más</a>
+                        </button>
                     </div>
                 </div>
             </div>
