--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                         <img src="media/contactanos.jpg" alt="">
                     </div>
                     <h2>CONTACTANOS</h2>
-                    <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
-                        experimentar con nuevas ideas y expandir el éxito.</p>
+                    <p>Obtenga una evaluación independiente de los procesos y controles empresariales en el entorno de IT
+                        dentro de una organización de servicios.</p>
                     <hr>
                     <div class="footer__card">
                         <button class="botones agrandar">
