--- a/index.html
+++ b/index.html
@@ -123,72 +123,74 @@
 
     <!--------PARALLAX-->
 
-    <main>
-        <section class="no-parallax">
-            <h1>Acompañamos a nuestros clientes en cada paso de su desarrollo tecnológico.</h1>
 
-
-
-        </section>
-
-
-        <section class="parallax bg">
-
-            <h2> ¿Te faltan recursos para mejorar la Ciberseguridad de tu empresa? Consultanos sin cargo.</h2>
-
-
-        </section>
-
-
-        <section class="no-parallax">
-
-            <div class="container__cards">
-                <div class="card">
-                    <div class="cover__card">
-                        <img src="media/servicios.jpg" alt="">
-                    </div>
-                    <h2> SERVICIOS</h2>
-                    <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
-                        experimentar con nuevas ideas y expandir el éxito.</p>
-                    <hr>
-                    <div class="footer__card">
-                        <button class="botones agrandar">
-                            <a href="./servicios.html">Saber más</a>
-                        </button>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="cover__card">
-                        <img src="media/producto.jpg" alt="">
-                    </div>
-                    <h2>PRODUCTOS</h2>
-                    <p>Aprovechen las ventajas de la era digital para sacar provecho de la innovación, impulsar la
-                        eficiencia operativa y hacer crecer sus negocios.</p>
-                    <hr>
-                    <div class="footer__card">
-                        <button class="botones agrandar">
-                            <a href="./productos.html">Saber más</a>
-                        </button>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="cover__card">
-                        <img src="media/contactanos.jpg" alt="">
-                    </div>
-                    <h2>CONTACTANOS</h2>
-                    <p>Obtenga una evaluación independiente de los procesos y controles empresariales en el entorno de IT
-                        dentro de una organización de servicios.</p>
-                    <hr>
-                    <div class="footer__card">
-                        <button class="botones agrandar">
-                            <a href="./contacto.html">Saber más</a>
-                        </button>
-                    </div>
-                </div>
+    <section id="slider">
+        <div id="content-images-slider">
+            <div class="image-slider rellax" data-rellax-speed="-10" style='background-image: url(/media/slider-4.png)'>
             </div>
+            <div class="image-slider rellax" data-rellax-speed="-6" style='background-image: url(/media/slider-3.png)'>
+            </div>
+            <div class="text-slider rellax" data-rellax-speed="-10">
+                <h1 id='slider-text'>ATLANT</h1>
+            </div>
+            <div class="image-slider rellax" data-rellax-speed="-4" style='background-image: url(/media/slider-2.png)'>
+            </div>
+            <div class="image-slider" style='background-image: url(/media/slider-1.png)'></div>
+        </div>
+    </section>
 
-        </section>
-    </main>
+
+    <section id="content"></section>
+
+
+
+    <div class="container__cards">
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/servicios.jpg" alt="">
+            </div>
+            <h2> SERVICIOS</h2>
+            <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
+                experimentar con nuevas ideas y expandir el éxito.</p>
+            <hr>
+            <div class="footer__card">
+                <button class="botones agrandar">
+                    <a href="./servicios.html">Saber más</a>
+                </button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/producto.jpg" alt="">
+            </div>
+            <h2>PRODUCTOS</h2>
+            <p>Aprovechen las ventajas de la era digital para sacar provecho de la innovación, impulsar la
+                eficiencia operativa y hacer crecer sus negocios.</p>
+            <hr>
+            <div class="footer__card">
+                <button class="botones agrandar">
+                    <a href="./productos.html">Saber más</a>
+                </button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/contactanos.jpg" alt="">
+            </div>
+            <h2>CONTACTANOS</h2>
+            <p>Obtenga una evaluación independiente de los procesos y controles empresariales en el entorno de
+                IT
+                dentro de una organización de servicios.</p>
+            <hr>
+            <div class="footer__card">
+                <button class="botones agrandar">
+                    <a href="./contacto.html">Saber más</a>
+                </button>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
@@ -236,6 +238,7 @@
         </div>
     </Footer>
 
+    <script src="./js/rellax.min.js"></script>
     <script src="./js/estilos.js"></script>
 
 
