--- a/index.html
+++ b/index.html
@@ -40,31 +40,20 @@
 
     </header>
 
-    <!-- <div class="container__all" id="container_all">
+    
+    <div class="cover">
 
-        <div class="cover">
+        <div class="text__information-cover">
+            <h1>Acompañamos a nuestros clientes en cada paso de su desarrollo tecnológico.</h1>
 
-            <div class="container__cover">
+            <p> ¿Te faltan recursos para mejorar la Ciberseguridad de tu empresa? Consultanos sin cargo.</p>
 
-                <div class="container__info">
-                    <h1>Acompañamos a nuestros clientes</h1>
-                    <h2> en cada paso de su desarrollo tecnológico.</h2>
-                    <p>¿Te faltan recursos para mejorar la Ciberseguridad de tu empresa? Consultanos sin cargo.</p>
-                    <input type="button" href="./contacto.html" value="Contactanos">
-                </div>
-                <div class="container__vector">
-                    <img src="media/undraw_Code_thinking_re_gka2.svg" alt="">
-                </div>
-            </div>
 
         </div>
+
     </div>
 
-
--->
-
-    <!--------PARALLAX-->
-
+   
 
     <div class="container__cards">
         <div class="card">
@@ -113,7 +102,7 @@
     </div>
 
 
-
+    
 
 
     <Footer>
